--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@rtcp/web",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
+    "typecheck": "tsc --noEmit -p tsconfig.json",
     "test": "echo 'no web tests yet'"
   },
   "dependencies": {
-    "@rtcp/shared": "0.1.0",
+    "@rtcp/shared": "0.2.0",
     "next": "14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
