--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ REDIS_URL=redis://localhost:6379
 REALTIME_PORT=4001
 NEXT_PUBLIC_WS_URL=ws://localhost:4001
 SNAPSHOT_EVERY_UPDATES=25
+DOC_CACHE_MAX=200
+RATE_LIMIT_PER_MINUTE=2400
+AUTH_TOKEN=dev-token
